# AI-Glasses

./: .gitignore  README.md
glasses/: .gitignore  CMakeLists.txt  README.md
glasses/components/esp32-camera/: CMakeLists.txt  Kconfig
glasses/main/: CMakeLists.txt  camera.c  camera.h  main.c  wifi_streaming.c  wifi_streaming.h
mobile/: README.md
